--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
-*{
+* {
   font-family: "League Spartan", sans-serif;
-  
+  box-sizing: border-box;
 }
 body {
-    /* margin: 0;
-    padding: 0; */
-    background-image: url('car2.jpg'); 
-    /* background-position: bottom left; */
-    /* background-position: left; /* Adjust position to left and center vertically */
-    background-size: cover; 
-    
+  background-image: url("image/car2.jpg");
+  background-size: cover;
 }
 .login {
   position: absolute;
@@ -26,7 +21,7 @@ body {
   text-align: center;
   border-radius: 30px;
 }
-#car{
+#car {
   margin-top: 0px;
   height: 250px;
   width: 400px;
@@ -35,10 +30,11 @@ h1 {
   font-size: 13px;
   font-style: normal;
   color: red;
-  margin-top:-40px;
+  margin-top: -40px;
 }
-p1, p2{
-    font-size:14px;
+p1,
+p2 {
+  font-size: 14px;
 }
 #logo {
   margin-top: -60px;
@@ -46,34 +42,141 @@ p1, p2{
   height: 150px;
 }
 .signup-form {
-    padding-top:25px;
-    max-width: 300px;
-    margin: 0 auto;
+  padding-top: 25px;
+  max-width: 300px;
+  margin: 0 auto;
 }
 
 .form-group {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 label {
-    margin-bottom: 10px;
-    margin-left:0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
 }
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    border: 1px solid #ccc;
-    border-radius: 10px; 
-    padding: 10px;
-    width:250px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  width: 250px;
 }
-#signup{
-    border: 1px solid #ccc;
-    border-radius: 10px; 
-    padding: 10px;
-    padding-right:30px;
-    padding-left:30px;
-    background-color:rgb(236,31,36) ;
-    color:white;
-    font-size: 15px;
+#signup {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
+  background-color: rgb(236, 31, 36);
+  color: white;
+  font-size: 15px;
+}
+p {
+  font-size: 11px;
+  text-align: end;
+  margin-top: -10px;
+}
+a {
+  color: red;
+  text-decoration: none;
+}
+#resetpwd {
+  width: 300px;
+  height: 300px;
+  margin-top: -50px;
+}
+h3 {
+  margin-top: -50px;
+}
+h4 {
+  font-size: 13px;
+  margin-top: -20px;
+  font-weight: lighter;
+}
+input[type="resetemail"] {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  width: 250px;
+}
+.reset-form {
+  padding-top: 25px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.resetform-group {
+  margin-bottom: 15px;
+}
+#reset,
+#sign {
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  padding: 7px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: rgb(236, 31, 36);
+  color: white;
+  font-size: 12px;
+}
+p4,
+p5 {
+  font-size: 13px;
+}
+.reset {
+  position: absolute;
+  background-color: white;
+  top: 10%;
+  bottom: 10%;
+  margin-left: 25%;
+  margin-right: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 50%;
+  text-align: center;
+  border-radius: 30px;
+}
+#pwd {
+  width: 200px;
+  height: auto;
+}
+h5 {
+  font-size: 15px;
+  margin-top: -30px;
+}
+label {
+  font-size: 13px;
+  margin-right: 150px;
+}
+input[type="newpwd"],
+input[type="confirmpwd"] {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  width: 250px;
+}
+.password-form {
+  padding-top: 25px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-top: -40px;
+}
+
+.newpwdform-group {
+  margin-bottom: 15px;
+}
+#newpassword {
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  padding: 7px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: rgb(236, 31, 36);
+  color: white;
+  font-size: 13px;
+  margin-top: 20px;
 }
