--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,14 +12,15 @@ code {
     monospace;
 }
 .background {
-  background-image: url("../public/image/car2.jpg");
-  background-size: cover;
+  /* background-image: url("../public/image/car2.jpg");
+  background-size: cover; */
   width: 100%;
   height: 100vh;
 }
 .login {
   position: absolute;
   background-color: white;
+  border:1px solid grey;
   top: 10%;
   bottom: 10%;
   margin-left: 20%;
@@ -60,6 +61,7 @@ code {
 .reset {
   position: absolute;
   background-color: white;
+  border:2px solid grey;
   top: 10%;
   bottom: 10%;
   margin-left: 25%;
