--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  /* font-family: "League Spartan", sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -20,7 +21,7 @@ code {
 .login {
   position: absolute;
   background-color: white;
-  border:1px solid grey;
+  border: 1px solid grey;
   top: 10%;
   bottom: 10%;
   margin-left: 20%;
@@ -61,7 +62,7 @@ code {
 .reset {
   position: absolute;
   background-color: white;
-  border:2px solid grey;
+  border: 2px solid grey;
   top: 10%;
   bottom: 10%;
   margin-left: 25%;
@@ -99,22 +100,25 @@ code {
   padding: 10px 20px;
   font-weight: 500;
 }
-.signup-form{
-  margin-top:-10px;
+.signup-form {
+  margin-top: -10px;
 }
 
-  .home {
-    width: 100%;
-    min-height: 100vh;
-    background-image: url(../public/image/home.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #eeeff1;
-    background-size: cover; /* Ensure the background image covers the entire container */
-    display: grid;
-    align-items: center;
-  }
-  
+.home {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url(../public/image/home.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #eeeff1;
+  background-size: cover;
+  display: grid;
+  align-items: center;
+}
+.step {
+  width: 80%;
+  margin-left: 10%;
+}
 .form-container form {
   display: flex;
   flex-wrap: wrap;
@@ -130,5 +134,81 @@ code {
 .text {
   margin-top: -300px;
 }
-
-
+.rental-image {
+  width: 500px;
+  border-radius: 1rem;
+}
+.image-about {
+  width: 50%;
+  margin-left: 100px;
+}
+.features {
+  margin-top: 300px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.list {
+  width: 50%;
+  margin-top: -100px;
+}
+.packages {
+  text-align: center;
+  margin-top: 60px;
+}
+.packages h {
+  font-weight: bolder;
+  font-size: 25px;
+  text-align: center;
+  align-items: center;
+  color: rgb(53, 53, 97);
+}
+.packages p {
+  font-size: 15px;
+  text-align: center;
+  align-items: center;
+  color: grey;
+}
+.footer {
+  display: flex;
+  gap: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 100px;
+  justify-content: space-around;
+}
+.bottom {
+  min-height: 50vh;
+  margin-top: 80px;
+  background-color: black;
+  color: white;
+}
+.copyright {
+  margin-left: 100px;
+}
+.footer h2 {
+  font-size: 20px;
+}
+.footer p {
+  font-size: 14px;
+}
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card-main{
+  display: flex;
+  margin-left: 250px;
+  margin-right: 40px;
+  margin-top: -150px;
+  height:100vh;
+}
+.table{
+  display: flex;
+  margin-left: 250px;
+  margin-right: 40px;
+  margin-top: -420px;
+}
