--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -225,14 +225,42 @@ code {
 }
 .edit-icon:hover {
   cursor: pointer;
-  color: red; /* Change the color to your desired hover color */
+  color: red;
 }
 .delete-icon:hover {
   cursor: pointer;
-  color: red; /* Change the color to your desired hover color */
+  color: red;
 }
-.bookings-table{
+.bookings-table {
   display: flex;
   margin-left: 250px;
   margin-top: 20px;
 }
+.main-booking {
+  display: flex;
+  padding-top: 30px;
+  padding-left: 80px;
+  gap: 50px;
+}
+.left-card {
+  width: 35%;
+  border-radius: 10px;
+  height: max-content;
+  border: 1px solid rgb(232, 230, 230);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.right-cards {
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  gap:20px;
+}
+/* .right-card {
+  background-color: rgb(237, 237, 237);
+  margin-bottom: 20px; 
+  padding: 20px;
+  border-radius: 10px;
+  flex: 1;
+} */
