--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.quickLinks > Link {
+  text-decoration: none;
+  color: white;
+} 
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
